--- a/moose.css
+++ b/moose.css
@@ -6,7 +6,8 @@
 
 <!DOCTYPE html>
 <html>
-<body>
+body{background:purple;font-family:arial;}
+h2{color:green;}
 
 <h2>Freezy Fruitade</h2>
 <p>Welcome to Freezy Fruitade.</p>
